@@ -2,7 +2,7 @@
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
  *
- *   Created: Fri Mar 16 20:56:19 2001
+ *   Created: Thu Mar 29 23:46:17 2001
  */
 #ifndef __CEXTRACT__
 #ifdef __STDC__
@@ -310,7 +310,7 @@ extern void process_players2 ( mapstruct *map );
 extern void process_events ( mapstruct *map );
 extern void clean_tmp_files ( void );
 extern void cleanup ( void );
-extern void leave ( player *pl );
+extern void leave ( player *pl, int draw_exit );
 extern int forbid_play ( void );
 extern void do_specials ( void );
 extern int main ( int argc, char **argv );
